# drosophibot-ROS

install/: local_setup.sh  setup.sh
install/interfaces/share/interfaces/: local_setup.sh  package.sh
install/limb_controller/lib/limb_controller/: limb_controller
install/limb_controller/share/limb_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/motor_control/lib/motor_control/: motor_control
install/motor_control/share/motor_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pubsub/lib/pubsub/: talker
install/pubsub/share/pubsub/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/strain_monitor/lib/strain_monitor/: strain_monitor
install/strain_monitor/share/strain_monitor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/testcpp/lib/testcpp/: test_node
interfaces/: CMakeLists.txt
interfaces/msg/: MotorCommand.msg  StrainData.msg
limb_controller/: CMakeLists.txt  package.xml
limb_controller/include/: Network.h  cjsontoEigen.cpp  cjsontoEigen.h
limb_controller/src/: Network.cpp  limb_controller.cpp
log/: latest_build
motor_control/: CMakeLists.txt
motor_control/src/: motor_control.cpp
pubsub/: CMakeLists.txt
strain_monitor/: CMakeLists.txt
strain_monitor/src/: serial_monitor.cpp  strain_monitor.cpp
testcpp/: CMakeLists.txt
testcpp/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
testcpp/log/: latest_build
testcpp/src/: testcpp.cpp
(+67 files in other folders)
